chore: upgrade baseline node requirement to >=12.7.0 (#2946)
Node 10.x has been end-of-lifed on `2021-04-30`, and it is more than
time to drop support for it entirely. Per our support policy, only
current releases of runtimes are supported, and hence we are at liberty
to make this change without incurring a major version bump.

BREAKING CHANGE: the minimum supported version of `node` changed from
`10.3.0` to `12.7.0`. We recommend using `16.x` if possible.

--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2.4.0
         with:
           cache: yarn
-          node-version: 10
+          node-version: 12
 
       - name: Install Tools
         run: |-
@@ -67,17 +67,16 @@ jobs:
           EOF
 
       - name: Run "ncu -u"
-        # We special-case @types/fs-extra because the current major (9.x) is broken with @types/node@10
         # We special-case typescript because it's not semantically versionned, and major.minor is the API contract
         run: |-
           # Upgrade devDependencies at repository root
-          ncu --upgrade --target=minor --filter=@types/node,@types/fs-extra
+          ncu --upgrade --target=minor --filter=@types/node
           ncu --upgrade --target=patch --filter=typescript
-          ncu --upgrade --target=latest --reject=@types/node,@types/fs-extra,typescript
+          ncu --upgrade --target=latest --reject=@types/node,typescript
 
           # Upgrade all production dependencies (and other always major-pinned dependencies)
           lerna exec --parallel ncu -- --upgrade --target=minor                                     \
-            --filter='@types/fs-extra,${{ steps.production-dependencies.outputs.list }}'            \
+            --filter='${{ steps.production-dependencies.outputs.list }}'                            \
             --reject='typescript,${{ steps.monorepo-packages.outputs.list }}'
 
           # Upgrade all minor-pinned dependencies
@@ -86,7 +85,7 @@ jobs:
 
           # Upgrade all other dependencies (devDependencies) to the latest
           lerna exec --parallel ncu -- --upgrade --target=latest                                    \
-            --reject='@types/node,@types/fs-extra,typescript,${{ steps.production-dependencies.outputs.list }},${{ steps.monorepo-packages.outputs.list }}'
+            --reject='@types/node,typescript,${{ steps.production-dependencies.outputs.list }},${{ steps.monorepo-packages.outputs.list }}'
 
       # This will ensure the current lockfile is up-to-date with the dependency specifications (necessary for "yarn update" to run)
       - name: Run "yarn install"
