chore(rosetta): change prettier line width to 120
Prettier is adding a lot of line breaks that are cluttering up the code.

Set the line width hint to 120, just for the Rosetta subproject.

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -14,3 +14,6 @@ overrides:
       singleQuote: true
       quoteProps: as-needed
       trailingComma: all
+  - files: "packages/jsii-rosetta/**"
+    options:
+      printWidth: 120
