--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -6,10 +6,10 @@ on: pull_request
 jobs:
   auto-approve:
     if: >
-       contains(github.event.pull_request.labels.*.name, 'pr/auto-approve') && 
-       (github.event.pull_request.user.login == 'aws-cdk-automation' 
-        || github.event.pull_request.user.login == 'dependabot[bot]' 
-        || github.event.pull_request.user.login == 'dependabot-preview[bot]')
+       github.event.pull_request.user.login == 'dependabot[bot]'
+        || github.event.pull_request.user.login == 'dependabot-preview[bot]'
+        || (contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
+            && github.event.pull_request.user.login == 'aws-cdk-automation')  
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
