--- a/packages/jsii-reflect/tsconfig.json
+++ b/packages/jsii-reflect/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig-base",
+  "compilerOptions": {
+    "experimentalDecorators": true,
+  },
   "include": ["**/*.ts"],
   "exclude": ["jest.config.ts"],
   "references": [
