--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.0.2",
     "@types/mock-fs": "^4.13.1",
     "@types/node": "^12.20.28",
+    "@types/workerpool": "^6.1.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
     "jsii": "^0.0.0",
@@ -36,6 +37,7 @@
     "fs-extra": "^9.1.0",
     "typescript": "~3.9.10",
     "@xmldom/xmldom": "^0.7.5",
+    "workerpool": "^6.1.5",
     "yargs": "^16.2.0"
   },
   "license": "Apache-2.0",
