label dependabot PR's with auto-approve

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -5,11 +5,7 @@ on: pull_request
 
 jobs:
   auto-approve:
-    if: >
-       github.event.pull_request.user.login == 'dependabot[bot]'
-        || github.event.pull_request.user.login == 'dependabot-preview[bot]'
-        || (contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
-            && github.event.pull_request.user.login == 'aws-cdk-automation')  
+    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
