--- a/packages/@jsii/spec/package.json
+++ b/packages/@jsii/spec/package.json
@@ -31,11 +31,14 @@
     "package": "package-js"
   },
   "dependencies": {
-    "jsonschema": "^1.4.0"
+    "jsonschema": "^1.4.0",
+    "sort-json": "^2.0.0",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^12.20.28",
+    "@types/fs-extra": "^9.0.13",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
     "jsii-build-tools": "^0.0.0",
