--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,7 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
-    "packages/*",
-    "regression-tests/@*/*"
+    "packages/*"
   ],
   "command": {
     "bootstrap": {
