--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -32,14 +32,15 @@
   },
   "dependencies": {
     "@jsii/check-node": "0.0.0",
-    "@jsii/spec": "^0.0.0",
+    "@jsii/spec": "0.0.0",
     "commonmark": "^0.30.0",
     "fs-extra": "^9.1.0",
     "typescript": "~3.9.10",
     "sort-json": "^2.0.0",
     "@xmldom/xmldom": "^0.7.5",
     "workerpool": "^6.1.5",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+    "jsii": "0.0.0"
   },
   "license": "Apache-2.0",
   "author": {
