--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -24,8 +24,7 @@
     "@types/workerpool": "^6.1.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
-    "jsii": "^0.0.0",
-    "jsii-build-tools": "^0.0.0",
+    "jsii-build-tools": "0.0.0",
     "memory-streams": "^0.1.3",
     "mock-fs": "^5.1.1",
     "prettier": "^2.4.1"
