chore: fixup @kaizen3031593 name

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1246,7 +1246,7 @@
     },
     {
       "login": "kaizen3031593",
-      "name": "kaizen3031593",
+      "name": "Kaizen Conroy",
       "avatar_url": "https://avatars.githubusercontent.com/u/36202692?v=4",
       "profile": "https://github.com/kaizen3031593",
       "contributions": [
