--- a/packages/jsii-pacmak/package.json
+++ b/packages/jsii-pacmak/package.json
@@ -33,7 +33,7 @@
     "test": "npm run test:unit && npm run test:build",
     "test:unit": "jest",
     "test:build": "bash test/build-test.sh",
-    "test:update": "jest -u && npm run test:build",
+    "test:update": "true",
     "package": "package-js"
   },
   "dependencies": {
