--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -22,6 +22,7 @@
     "@types/mock-fs": "^4.13.1",
     "@types/node": "^12.20.37",
     "@types/workerpool": "^6.1.0",
+    "@types/semver": "^7.3.9",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
     "jsii-build-tools": "0.0.0",
@@ -39,6 +40,9 @@
     "@xmldom/xmldom": "^0.7.5",
     "workerpool": "^6.1.5",
     "yargs": "^16.2.0",
+    "semver": "^7.3.5",
+    "semver-intersect": "^1.4.0",
+    "fast-glob": "^3.2.7",
     "jsii": "0.0.0"
   },
   "license": "Apache-2.0",
